# Inxtinct_MCP

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
Client/: main.py  test.py
DatabaseServer/: main.py  server.py
WeatherServer/: main.py  server.py
